--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,9 @@
 	--greyLight-2: #c8d0e7;
 	--greyLight-3: #bec8e4;
 	--greyDark: #9baacf;
+
+	--scrollbarBG: #CFD8DC;
+	--thumbBG: #90A4AE;
 }
 
 $shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2),
@@ -27,13 +30,28 @@ $inner-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
 html {
 	box-sizing: border-box;
 	font-size: 62.5%; // 1rem = 10px    100% = 16px
-	overflow-y: scroll;
 	background: var(--greyLight-1);
 }
 
 body {
 	font-family: "Poppins", sans-serif;
 	background: var(--greyLight-1);
+	scrollbar-width: thin;
+  	scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+	  
+	&::-webkit-scrollbar {
+		width: 11px;
+	}
+	
+	&::-webkit-scrollbar-track {
+		background: var(--scrollbarBG);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--thumbBG) ;
+		border-radius: 6px;
+		border: 3px solid var(--scrollbarBG);
+	}
 }
 
 .note {
@@ -44,3 +62,4 @@ body {
 @import 'basic/_button.scss';
 @import 'basic/_card.scss';
 @import 'basic/_chip.scss';
+@import 'basic/_icon.scss';
