--- a/src/styles/components/MovieResults.scss
+++ b/src/styles/components/MovieResults.scss
@@ -105,6 +105,9 @@
     h1 {
         margin-top: 1rem;
         text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .buttons {
