--- a/src/styles/basic/_button.scss
+++ b/src/styles/basic/_button.scss
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition: 0.3s ease;
+    transition: 0.1s;
     margin: 1rem;
 
     &__primary {
