--- a/src/styles/components/TitleSearch.scss
+++ b/src/styles/components/TitleSearch.scss
@@ -2,6 +2,7 @@
 
 .search {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     font-family: "Poppins", sans-serif;
 
@@ -38,9 +39,14 @@
         display: flex;
         color: var(--greyDark);
         transition: 0.3s ease;
+
+        @media screen and (max-width: 560px) {
+            margin-top: -3rem;
+        }
     }
 }
 
 .error {
     color: red;
+    font-weight: bold;
 }
