--- a/src/styles/components/LanguageSearch.scss
+++ b/src/styles/components/LanguageSearch.scss
@@ -1,5 +1,16 @@
 @import '../global.scss';
 
+.title {
+    text-align: center;
+    font-size: 5rem;
+    margin-top: 1rem;
+}
+
+.card {
+    box-shadow: none;
+    padding: 0rem;
+}
+
 .search {
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +28,7 @@
         background: none;
         font-family: inherit;
         color: var(--greyDark);
+        margin-bottom: 1rem;
 
         &::placeholder {
             color: var(--greyLight-3);
@@ -39,6 +51,7 @@
         display: flex;
         color: var(--greyDark);
         transition: 0.3s ease;
+        margin-bottom: 1rem;
 
         @media screen and (max-width: 567px) {
             margin-top: -60px;
@@ -50,5 +63,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
+}
+
+.chip:not(:first-child) {
+    margin-left: 1rem;
 }
