--- a/src/styles/components/MovieCard.scss
+++ b/src/styles/components/MovieCard.scss
@@ -16,6 +16,7 @@
     padding-bottom: 2rem;
     box-shadow: $shadow;
     border-radius: 3rem;
+    animation: fadein 3s;
 
     img {
         display: block;
@@ -38,4 +39,9 @@
         align-items: center;
         justify-content: center;
     }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
