Finishing Language searching and a lot of changes to the UX

--- a/src/styles/basic/_chip.scss
+++ b/src/styles/basic/_chip.scss
@@ -27,6 +27,9 @@
     }
 
     p {
+        white-space: nowrap; 
+        overflow: hidden; 
+        text-overflow: ellipsis;
         font-size: 1.5rem;
         color: var(--greyDark);
     }
