--- a/src/styles/components/UploadFile.scss
+++ b/src/styles/components/UploadFile.scss
@@ -6,6 +6,7 @@
 	box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2),
 				-0.2rem -0.2rem 1.8rem var(--white);
     padding: 3rem;
+    margin-top: 3rem;
 
 	@media (max-width: 560px) {
         width: 35rem;
