--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,11 +60,11 @@ body {
 }
 
 .loader {
-	border: 16px solid #f3f3f3; /* Light grey */
-	border-top: 16px solid #3498db; /* Blue */
+	border: 16px solid var(--greyLight-1); /* Light grey */
+	border-top: 16px solid var(--primary); /* Blue */
 	border-radius: 50%;
-	width: 120px;
-	height: 120px;
+	width: 15px;
+	height: 15px;
 	animation: spin 2s linear infinite;
 }
   
@@ -72,6 +72,12 @@ body {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
 }
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 1s, opacity 1s linear;
+}       
 
 @import 'basic/_button.scss';
 @import 'basic/_card.scss';
