Added subtitles result display

--- a/src/styles/components/SearchingDetails.scss
+++ b/src/styles/components/SearchingDetails.scss
@@ -1,6 +1,7 @@
 @import '../global.scss';
 .card {
     margin-left: -5rem;
+    max-height: 15rem;
     @media (max-width: 1700px) {
         margin-left: 0;
     }
