Adjusting font size for mobile devices

--- a/src/styles/components/SubtitleCard.scss
+++ b/src/styles/components/SubtitleCard.scss
@@ -22,6 +22,7 @@
     padding: 1rem;
     margin-top: 2rem;
     animation: fadein 2s;
+    font-size: 1.5rem;
 
     .subtitle-card-rating {
         display: flex;
