Added dark theme

--- a/src/styles/basic/_button.scss
+++ b/src/styles/basic/_button.scss
@@ -15,7 +15,7 @@
         background: var(--primary);
         box-shadow: inset 0.2rem 0.2rem 1rem var(--primary-light), inset -0.2rem -0.2rem 1rem var(--primary-dark),
             $shadow;
-        color: var(--greyLight-1);
+        color: #fff;
 
         &:hover {
             color: var(--white);
