--- a/src/styles/components/SubtitleCard.scss
+++ b/src/styles/components/SubtitleCard.scss
@@ -24,6 +24,10 @@
     animation: fadein 2s;
     font-size: 1.5rem;
 
+    h6 {
+        color: #7566FC;
+    }
+
     .subtitle-card-rating {
         display: flex;
         align-items: center;
